[gd_scene load_steps=3 format=3 uid="uid://036l2dqcv1v2"]

[ext_resource type="Script" path="res://GumballFinish.gd" id="1_ggtae"]
[ext_resource type="Texture2D" uid="uid://b0u5rrrq0m47h" path="res://finish.png" id="2_nywg7"]

[node name="GumballFinish" type="Node2D"]
script = ExtResource("1_ggtae")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(10, 10)

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
texture = ExtResource("2_nywg7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-9, -2, 9, -2, 2.08165e-12, 9)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
